--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:latest
 RUN apt-get update && apt-get install software-properties-common -y
 RUN apt-get update && apt-get install build-essential wget -y
+RUN apt-get update && apt-get install libxext6 libxrender-dev libxtst-dev -y
 RUN wget https://download.java.net/java/GA/jdk13.0.1/cec27d702aa74d5a8630c65ae61e4305/9/GPL/openjdk-13.0.1_linux-x64_bin.tar.gz
 RUN tar -xvf openjdk-13.0.1_linux-x64_bin.tar.gz
 RUN mv jdk-13.0.1 /opt/
