--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,12 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 	},
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
+	"runArgs": [ "--cap-add=SYS_PTRACE", 
+				 "--security-opt", "seccomp=unconfined",
+				 "--net=host",
+				 "-e", "DISPLAY=${env:DISPLAY}",
+				 "-v", "/tmp/.X11-unix:/tmp/.X11-unix"
+				],
 
 	// Set *default* container specific settings.json values on container create.
 	//"settings": { 
